--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,6 @@ celerybeat.pid
 .env
 .venv
 env/
-venv/
 ENV/
 env.bak/
 venv.bak/
@@ -127,3 +126,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+.idea/
